# News-Alpha-Z

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
configs/: default.yaml  model_frozen_encoder.yaml  universe_sp100.yaml
notebooks/: 01_data_check.ipynb  02_factor_eda.ipynb  03_model_training_debug.ipynb  04_factor_evaluation.ipynb  05_attention_case_study.ipynb
reports/: b2_b4_tcn_report.md  b2_b5_tcn_report.md  data_prep_qa.md  experiment_results.md  factor_report_template.md  method.md
scripts/: 01_build_panel.py  02_chunk_news.py  03_encode_chunks.py  04_build_price_factors.py  05_train_branches.py  06_train_gate.py  07_generate_news_factor.py  08_evaluate_factor.py  09_build_news_repr.py  10_build_news_repr_mean768.py  11_build_training_panel_b2.py  12_train_b2_b4.py  13_train_b2_b5.py  14_train_b3_b4.py  15_train_b3_b5.py  16_build_chunk_memmap_cache.py  17_train_factor_only_baseline.py  18_build_multistyle_factors.py  20_diagnose_raw_factors.py  21_run_six_factor_alpha_baseline.py  22_train_factor_mlp_rank_loss.py  check_chunk_memmap_cache.py
src/fulltext_news_alpha/: __init__.py  config.py  schemas.py
tests/: test_baselines_and_factor.py  test_build_news_repr.py  test_chunk_memmap_cache.py  test_chunking.py  test_factor_metrics.py  test_factor_mlp_rank_loss.py  test_factor_only_baseline.py  test_model_smoke.py  test_multistyle_factors.py  test_no_lookahead.py  test_raw_factor_diagnostics.py  test_six_factor_alpha_baseline.py  test_temporal_tcn.py  test_time_alignment.py
wandb/: latest-run
(+95 files in other folders)
